--- a/src/styles/core/elements/_mcs-button.scss
+++ b/src/styles/core/elements/_mcs-button.scss
@@ -1,4 +1,5 @@
 button, button.btn {
   font-family: $button-font;
+  font-weight: $button-font-weight;
   @include font-size($button-font-size);
 }
