--- a/src/styles/shared/_variables.scss
+++ b/src/styles/shared/_variables.scss
@@ -83,8 +83,9 @@ $border-radius-small: 2px;
 $border-radius-medium: 4px;
 
 // Button
-$button-font: $base-font-bold;
+$button-font: $base-font;
 $button-font-size: $font-size-large;
+$button-font-weight: 500;
 
 // Shared settings for the page
 $shared-top-panel-size: 50px;
